[gd_scene load_steps=6 format=3 uid="uid://bf7nrqw23fgfo"]

[ext_resource type="Texture2D" uid="uid://deeqdranyqekd" path="res://Crop/default.tres" id="1_hvckf"]
[ext_resource type="Script" path="res://Crop/Crop.gd" id="1_jr03e"]
[ext_resource type="PackedScene" uid="uid://b4v85ddke6qgi" path="res://FarmerAndMouseDetector/FarmerAndMouseDectector.tscn" id="3_tldfm"]
[ext_resource type="Script" path="res://Crop/display_grow_time.gd" id="4_484xl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pie7l"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hvckf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Crop" type="Node2D"]
script = ExtResource("1_jr03e")
farm_plot_path = "res://FarmPlot/FarmPlot.tscn"
water_menu_path = "res://Menu/InteractGroundMenu/WaterMenu/WaterMenu.tscn"
harvest_menu_path = "res://Menu/InteractGroundMenu/HarvestMenu/HarvestMenu.tscn"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pie7l")

[node name="FarmerAndMouseDectector" parent="." instance=ExtResource("3_tldfm")]

[node name="z_index_5" type="Node2D" parent="."]
z_index = 5
z_as_relative = false

[node name="display_grow_time" type="Label" parent="z_index_5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -34.0
offset_right = 12.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
vertical_alignment = 1
script = ExtResource("4_484xl")

[node name="Display_Timer" type="Timer" parent="z_index_5/display_grow_time"]
one_shot = true

[connection signal="farmer_and_mouse_in_area" from="FarmerAndMouseDectector" to="." method="_on_farmer_and_mouse_dectector_farmer_and_mouse_in_area"]
[connection signal="farmer_and_mouse_not_in_area" from="FarmerAndMouseDectector" to="." method="_on_farmer_and_mouse_dectector_farmer_and_mouse_not_in_area"]
[connection signal="left_mouse_clicked_while_farmer_and_mouse_in_area" from="FarmerAndMouseDectector" to="." method="_on_farmer_and_mouse_dectector_left_mouse_clicked_while_farmer_and_mouse_in_area"]

[editable path="FarmerAndMouseDectector"]
